[+FEATURE] Added Imprint functionality

--- a/src/app/locale/de_DE/template/germansetup/email/enterprise_invitation.html
+++ b/src/app/locale/de_DE/template/germansetup/email/enterprise_invitation.html
@@ -26,7 +26,7 @@
                             <a href="{{var url|escape}}">{{var url|escape}}</a>
                             </div>
 
-                            <p>Vielen Dank,<br/>{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}</p>
+                            <p>Vielen Dank,<br/>{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}</p>
                         </td>
                     </tr>
                 </table>
