--- a/src/app/locale/de_DE/template/germansetup/email/product_price_alert.html
+++ b/src/app/locale/de_DE/template/germansetup/email/product_price_alert.html
@@ -7,4 +7,4 @@ Hallo {{var customerName}},
 
 {{var alertGrid}}
 
-{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
