--- a/src/app/locale/de_DE/template/germansetup/email/product_share.html
+++ b/src/app/locale/de_DE/template/germansetup/email/product_share.html
@@ -24,4 +24,4 @@ Use vars: {{var var_name}}
 <p>Hier ist die Nachricht:</p> 
 <p>{{var message}}</p>
 
-{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
