--- a/src/app/locale/de_DE/template/germansetup/email/product_stock_alert.html
+++ b/src/app/locale/de_DE/template/germansetup/email/product_stock_alert.html
@@ -6,4 +6,4 @@
 <p>Hallo {{var customerName}},</p>
 {{var alertGrid}}
 
-{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
