--- a/src/app/locale/de_DE/template/germansetup/zahlung.html
+++ b/src/app/locale/de_DE/template/germansetup/zahlung.html
@@ -3,7 +3,7 @@
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
 <strong>MUSTER</strong> zu verstehen und müssen in jedem Fall durch 
 eigene rechtssichere Texte unter CMS -> Statische Blöcke ersetzt 
-werden. Weder symmetrics gmbh noch Trusted Shops tragen für die 
+werden. Weder germansetup gmbh noch Trusted Shops tragen für die
 Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <h2>Zahlungsarten</h2>
@@ -14,7 +14,7 @@ Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <p>Kostenloser Versand innerhalb Deutschlands (Außer Express-Versand)</p>
 <p>Bitte überweisen Sie den Gesamtbetrag Ihrer Bestellung auf unser Konto:</p>
-<p>{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/email/footer.phtml"}}</p>
 
 <h3>Rechnung</h3>
 
