--- a/src/app/locale/de_DE/template/germansetup/bestellung.html
+++ b/src/app/locale/de_DE/template/germansetup/bestellung.html
@@ -3,12 +3,12 @@
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
 <strong>MUSTER</strong> zu verstehen und müssen in jedem Fall durch 
 eigene rechtssichere Texte unter CMS -> Statische Blöcke ersetzt 
-werden. Weder symmetrics gmbh noch Trusted Shops tragen für die 
+werden. Weder germansetup gmbh noch Trusted Shops tragen für die
 Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <h2>Bestellvorgang, einfach und bequem bestellen</h2>
 
-<h3>Wie kann ich bei {{block type="imprint/field" value="shop_name"}} bestellen?</h3>
+<h3>Wie kann ich bei {{block type="germansetup/imprint_field" value="shop_name"}} bestellen?</h3>
 
 <h4>1. Warenkorb</h4>
 
