--- a/src/app/locale/de_DE/template/germansetup/email/account_new.html
+++ b/src/app/locale/de_DE/template/germansetup/email/account_new.html
@@ -20,7 +20,7 @@
 				<table cellspacing="0" cellpadding="0" border="0" width="650">
 					<tr>
 						<td valign="top">
-							<a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="imprint/field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a>
+							<a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="germansetup/imprint_field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a>
 						</td>
 					</tr>
 				</table>
@@ -38,11 +38,11 @@
 							    <li>Ihr Passwort ändern</li>
 							    <li>Verschiedene Adressen für den Versand an Familienmitglieder und Freunde sowie Rechnungsadressen speichern</li>
 							</ul>
-							<p>Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="imprint/field" value="email"}}" style="color:#1E7EC8;">{{block type="imprint/field" value="email"}}</a></p>
+							<p>Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="germansetup/imprint_field" value="email"}}" style="color:#1E7EC8;">{{block type="germansetup/imprint_field" value="email"}}</a></p>
 						</td>
 					</tr>
 					<tr>
-						<td>{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}</td>
+						<td>{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}</td>
 					</tr>
                     <tr>
                        <td style="border-bottom:2px solid #eee;">
