--- a/src/app/locale/de_DE/template/germansetup/email/account_new_confirmation.html
+++ b/src/app/locale/de_DE/template/germansetup/email/account_new_confirmation.html
@@ -20,7 +20,7 @@
 				<!-- [ header starts here] -->
 				<table cellspacing="0" cellpadding="0" border="0" width="650">
 					<tr>
-						<td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="imprint/field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
+						<td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="germansetup/imprint_field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
 					</tr>
 				</table>
 				<!-- [ middle starts here] -->
@@ -30,11 +30,11 @@
 							<p><strong>Hallo {{htmlescape var=$customer.name}}</strong>, <br/> herzlich willkommen in unserem Shop.</p>
 							<p>Ihre E-Mail-Adresse {{var customer.email}} muß bestätigt werden, bevor Sie sich damit in unserem Shop einloggen können.</p>
 							<p>Um die E-Mail-Adresse zu bestätigen und sich sofort einzuloggen, benutzen Sie bitte <a href="{{store url="customer/account/confirm/" _query_id=$customer.id _query_key=$customer.confirmation _query_back_url=$back_url}}" style="color:#1E7EC8;">diesen Bestätigunslink</a>. Dieser Link ist nur einmal gülitig.</p>
-							<p>Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="imprint/field" value="email"}}" style="color:#1E7EC8;">{{block type="imprint/field" value="email"}}</a>.</p>
+							<p>Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="germansetup/imprint_field" value="email"}}" style="color:#1E7EC8;">{{block type="germansetup/imprint_field" value="email"}}</a>.</p>
 						</td>
 					</tr>
 					<tr>
-						<td>{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}</td>
+						<td>{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}</td>
 					</tr>
                     <tr>
                        <td style="border-bottom:2px solid #eee;">
