--- a/src/app/locale/de_DE/template/germansetup/email/creditmemo_new.html
+++ b/src/app/locale/de_DE/template/germansetup/email/creditmemo_new.html
@@ -26,7 +26,7 @@
 	        <!-- [ header starts here] -->
 	        <table cellspacing="0" cellpadding="0" border="0" width="650">
 	            <tr>
-	                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="imprint/field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
+	                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="germansetup/imprint_field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
 	            </tr>
 	        </table>
 	        <!-- [ middle starts here] -->
@@ -35,9 +35,9 @@
 	                <td valign="top">
 	                    <p>
 	                        <strong>Hallo {{htmlescape var=$order.getCustomerName()}}</strong>,<br/>
-	                        Vielen Dank für Ihre Bestellung bei {{block type="imprint/field" value="shop_name"}}.
+	                        Vielen Dank für Ihre Bestellung bei {{block type="germansetup/imprint_field" value="shop_name"}}.
 	                        Sie können den aktuellen Status Ihrer Bestellung jederzeit <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in Ihrem Kundenbereich</a> einsehen.</p>
-	                        Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="imprint/field" value="email"}}" style="color:#1E7EC8;">{{block type="imprint/field" value="email"}}</a>.
+	                        Sollten Sie Fragen zu Ihrem Kundenkonto oder andere Anfragen haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="germansetup/imprint_field" value="email"}}" style="color:#1E7EC8;">{{block type="germansetup/imprint_field" value="email"}}</a>.
 	                        Vielen Dank!
 	                    </p>
 	                    <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">
@@ -95,7 +95,7 @@
 	            </tr>
                 <tr>
 	                <td>
-	                   {{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+	                   {{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
 	                </td>
 	            </tr>
 	            <tr><td style="border-bottom:2px solid #eee;">&nbsp;</td></tr>
