--- a/src/app/locale/de_DE/template/germansetup/email/newsletter_subscr_confirm.html
+++ b/src/app/locale/de_DE/template/germansetup/email/newsletter_subscr_confirm.html
@@ -18,7 +18,7 @@
                 <table cellspacing="0" cellpadding="0" border="0" width="650">
                     <tr>
                         <td valign="top">
-                            <p><a href="{{store url=""}}" style="color:#1E7EC8;"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="imprint/field" value="shop_name"}}" border="0"/></a></p></td>
+                            <p><a href="{{store url=""}}" style="color:#1E7EC8;"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="germansetup/imprint_field" value="shop_name"}}" border="0"/></a></p></td>
                     </tr>
                 </table>
 
@@ -34,7 +34,7 @@
                     </tr>
                     <tr>
                         <td>
-                            {{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+                            {{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
                         </td>
                     </tr>
                     </table>
