--- a/src/app/locale/de_DE/template/germansetup/email/newsletter_unsub_success.html
+++ b/src/app/locale/de_DE/template/germansetup/email/newsletter_unsub_success.html
@@ -1,3 +1,3 @@
 Newsletter Abmeldung erfolgreich
 
-{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
