--- a/src/app/locale/de_DE/template/germansetup/email/order_new.html
+++ b/src/app/locale/de_DE/template/germansetup/email/order_new.html
@@ -30,14 +30,14 @@
 				<!-- [ header starts here] -->
 				<table cellspacing="0" cellpadding="0" border="0" width="650">
 					<tr>
-						<td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="imprint/field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
+						<td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area=''frontend''}}" alt="{{block type="germansetup/imprint_field" value="shop_name"}}"  style="margin-bottom:10px;" border="0"/></a></td>
 					</tr>
 				</table>
 				<!-- [ middle starts here] -->
 				<table cellspacing="0" cellpadding="0" border="0" width="650">
 					<tr>
 						<td valign="top">
-							<p><strong>Hallo {{htmlescape var=$order.getCustomerName()}}</strong>,<br/>Vielen Dank für Ihre Bestellung bei {{block type="imprint/field" value="shop_name"}}. Sie können den aktuellen Status Ihrer Bestellung jederzeit <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in Ihrem Kundenbereich</a> einsehen. Sollten Sie Fragen zu Ihrem Kundenkonto oder Ihrer Bestellung haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="imprint/field" value="email"}}" style="color:#1E7EC8;">{{block type="imprint/field" value="email"}}</a>.</p>
+							<p><strong>Hallo {{htmlescape var=$order.getCustomerName()}}</strong>,<br/>Vielen Dank für Ihre Bestellung bei {{block type="germansetup/imprint_field" value="shop_name"}}. Sie können den aktuellen Status Ihrer Bestellung jederzeit <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in Ihrem Kundenbereich</a> einsehen. Sollten Sie Fragen zu Ihrem Kundenkonto oder Ihrer Bestellung haben, senden Sie uns eine E-Mail an <a href="mailto:{{block type="germansetup/imprint_field" value="email"}}" style="color:#1E7EC8;">{{block type="germansetup/imprint_field" value="email"}}</a>.</p>
 							<p>Nachfolgend finden Sie Ihre Bestellbestätigung, vielen Dank!</p>
 							
 							<h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">Ihre Bestellung Nr. {{var order.increment_id}} <small>({{var order.getCreatedAtFormated(''long'')}})</small></h3>
@@ -98,7 +98,7 @@
 					</tr>
 					<tr>
 						<td>
-							{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+							{{block type="germansetup/imprint_content" template="germansetup/imprint/email_footer.phtml"}}
 						</td>
 					</tr>
 					<tr><td style="border-bottom:2px solid #eee;">&nbsp;</td></tr>
