--- a/src/app/locale/de_DE/template/germansetup/impressum.html
+++ b/src/app/locale/de_DE/template/germansetup/impressum.html
@@ -3,22 +3,24 @@
 <p>Die hier bereitgestellten Mustertexte sind ausdrücklich als 
 <strong>MUSTER</strong> zu verstehen und müssen in jedem Fall durch 
 eigene rechtssichere Texte unter CMS -> Statische Blöcke ersetzt 
-werden. Weder symmetrics gmbh noch Trusted Shops tragen für die 
+werden. Weder germansetup gmbh noch Trusted Shops tragen für die
 Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <h2>Impressum (Muster)</h2>
 
-<h3>{{block type="imprint/field" value="shop_name"}}</h3>
+<h3>{{block type="germansetup/imprint_field" value="shop_name"}}</h3>
 
-<p>{{block type="imprint/content" template="symmetrics/imprint/communication.phtml"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/address.phtml"}}</p>
 
-<p>{{block type="imprint/content" template="symmetrics/imprint/legal.phtml"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/communication.phtml"}}</p>
 
-<p>{{block type="imprint/content" template="symmetrics/imprint/bank.phtml"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/legal.phtml"}}</p>
 
-<p>{{block type="imprint/field" value="business_rules"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/bank.phtml"}}</p>
 
-<p>Sie erreichen unseren Kundendienst für Fragen Reklamationen und Beanstandungen unter Telefon: {{block type="imprint/field" value="telephone"}} sowie per Email unter <a href="mailto:{{block type="imprint/field" value="email"}}">{{block type="imprint/field" value="email"}}</a>. Für Anfragen können Sie auch das Kontaktformular auf unserer Internetseite nutzen.</p>
+<p>{{block type="germansetup/imprint_field" value="business_rules"}}</p>
+
+<p>Sie erreichen unseren Kundendienst für Fragen Reklamationen und Beanstandungen unter Telefon: {{block type="germansetup/imprint_field" value="telephone"}} sowie per Email unter <a href="mailto:{{block type="germansetup/imprint_field" value="email"}}">{{block type="germansetup/imprint_field" value="email"}}</a>. Für Anfragen können Sie auch das Kontaktformular auf unserer Internetseite nutzen.</p>
 
 <h3>Disclaimer (Muster)</h3>
 
@@ -28,8 +30,6 @@ Richtigkeit und Vollständigkeit dieser Texte eine Verantwortung.</p>
 
 <p>Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der verwendeten Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu beachten, von ihm selbst erstellte Bilder, Grafiken, Tondokumente, Videosequenzen und Texte zu nutzen oder auf lizenzfreie Grafiken, Tondokumente, Videosequenzen und Texte zurückzugreifen. Alle innerhalb des Internetangebotes genannten und ggf. durch Dritte geschützten Marken- und Warenzeichen unterliegen uneingeschränkt den Bestimmungen des jeweils gültigen Kennzeichenrechts und den Besitzrechten der jeweiligen eingetragenen Eigentümer. Allein aufgrund der bloßen Nennung ist nicht der Schluss zu ziehen, dass Markenzeichen nicht durch Rechte Dritter geschützt sind! Das Copyright für veröffentlichte, vom Autor selbst erstellte Objekte bleibt allein beim Autor der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokumente, Videosequenzen und Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des Autors nicht gestattet.</p>
 
-<p>Inhaltlich verantwortlich gemäß § 5 TMG ist {{block type="imprint/field" value="ceo"}}, Kontaktdaten siehe oben. </p>
+<p>Inhaltlich verantwortlich gemäß § 5 TMG ist {{block type="germansetup/imprint_field" value="ceo"}}, Kontaktdaten siehe oben. </p>
 
-<h3>Bankverbindung</h3>
-
-<p>{{block type="imprint/content" template="symmetrics/imprint/bank.phtml"}}</p>
+<p>{{block type="germansetup/imprint_content" template="germansetup/imprint/bank.phtml"}}</p>
