--- a/src/app/locale/de_DE/template/germansetup/mrg-cms-beispiel.html
+++ b/src/app/locale/de_DE/template/germansetup/mrg-cms-beispiel.html
@@ -2,15 +2,15 @@
 
 <h2>Ein Beispiel für Einbindung einzelner Felder / Strings aus dem Impressum-Modul:</h2>
 
-<p>Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Privatpersonen über den Online-Shop der {{block type="imprint/field" value="company_first"}}, {{block type="imprint/field" value="zip"}} {{block type="imprint/field" value="city"}}, Geschäftsführer: {{block type="imprint/field" value="ceo"}}</p>
-<p>(nachfolgend "{{block type="imprint/field" value="shop_name"}}") abgeben.</p>
-<p><strong>Service-Hotline: Mo bis So 8 - 22 Uhr unter Telefon {{block type="imprint/field" value="telephone"}} E-Mail {{block type="imprint/field" value="email"}}</strong></p>
+<p>Diese Allgemeinen Geschäftsbedingungen gelten für alle Bestellungen, die Privatpersonen über den Online-Shop der {{block type="germansetup/imprint_field" value="company_first"}}, {{block type="germansetup/imprint_field" value="zip"}} {{block type="germansetup/imprint_field" value="city"}}, Geschäftsführer: {{block type="germansetup/imprint_field" value="ceo"}}</p>
+<p>(nachfolgend "{{block type="germansetup/imprint_field" value="shop_name"}}") abgeben.</p>
+<p><strong>Service-Hotline: Mo bis So 8 - 22 Uhr unter Telefon {{block type="germansetup/imprint_field" value="telephone"}} E-Mail {{block type="germansetup/imprint_field" value="email"}}</strong></p>
 
 
 <hr /><h2>Ein Beispiel für Einbindung von vorformatierten Templates mit Impressum-Daten:</h2>
 
 <pre>
-{{block type="imprint/content" template="symmetrics/imprint/email/footer.phtml"}}
+{{block type="germansetup/imprint_content" template="germansetup/imprint/email/footer.phtml"}}
 </pre>
 
 <hr /><h2>Ein Beispiel für Einbindung von anderen CMS Blocks innerhalb der Seite:</h2>
