--- a/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
+++ b/src/app/design/adminhtml/default/default/template/germansetup/form.phtml
@@ -88,59 +88,20 @@
                                 <input type="checkbox" name="product_tax_classes" id="checkbox_product_tax_classes" value="1" checked="checked" style="float:left; margin: 5px 5px 5px 0;" />
                                 <table cellspacing="5" class="">
                                     <tbody>
+                                        <?php foreach($this->getProductTaxClasses() as $taxClass): ?>
                                         <tr>
-                                            <td rowspan="3">
-
-                                            </td>
-                                            <td rowspan="3"><?php echo $this->__('Old') ?>: </td>
+                                            <td><?php echo $this->__('Old') ?>: </td>
+                                            <td><strong><?php echo $taxClass['label'] ?></strong></td>
+                                            <td><?php echo $this->__('New') ?>: </td>
                                             <td>
-                                                <select name="product_tax_class_source_1">
-                                                    <?php foreach($this->getProductTaxClasses() as $taxClass): ?>
-                                                        <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
-                                                    <?php endforeach ?>
-                                                </select>
-                                            </td>
-                                            <td rowspan="3"><?php echo $this->__('New') ?>: </td>
-                                            <td>
-                                                <select name="product_tax_class_target_1">
+                                                <select name="product_tax_class_target[<?php echo $taxClass['value'] ?>]">
                                                     <?php foreach($this->getNewProductTaxClasses() as $taxClass): ?>
                                                         <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
                                                     <?php endforeach ?>
                                                 </select>
                                             </td>
                                         </tr>
-                                        <tr>
-                                            <td>
-                                                <select name="product_tax_class_source_2">
-                                                    <?php foreach($this->getProductTaxClasses() as $taxClass): ?>
-                                                        <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
-                                                    <?php endforeach ?>
-                                                </select>
-                                            </td>
-                                            <td>
-                                                <select name="product_tax_class_target_2">
-                                                    <?php foreach($this->getNewProductTaxClasses() as $taxClass): ?>
-                                                        <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
-                                                    <?php endforeach ?>
-                                                </select>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <select name="product_tax_class_source_3">
-                                                    <?php foreach($this->getProductTaxClasses() as $taxClass): ?>
-                                                        <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
-                                                    <?php endforeach ?>
-                                                </select>
-                                            </td>
-                                            <td>
-                                                <select name="product_tax_class_target_3">
-                                                    <?php foreach($this->getNewProductTaxClasses() as $taxClass): ?>
-                                                        <option value="<?php echo $taxClass['value'] ?>"><?php echo $taxClass['label'] ?></option>
-                                                    <?php endforeach ?>
-                                                </select>
-                                            </td>
-                                        </tr>
+                                        <?php endforeach ?>
                                     </tbody>
                                 </table>
                             </td>
